# pyrand48

./: .gitignore  LICENSE.md  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: CODEOWNERS  release.yml  test.yml
pyrand48/: rand48.py
tests/: generate_pyrand48_test.c  generate_rand48_conformance_data.c  pyrand48_test.py
tests/data/: rand48_conformance_data.json
