[project]
name = "pyrand48"
version = "0.1.7"
description = "An implementation of the rand48 linear congruential generator."
authors = [{ name = "MLE Slone", email = "m.slone@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/uklibraries/pyrand48/"

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "pre-commit>=4.0.0,<5",
    "pytest>=8.3.3,<9",
    "isort>=5.13.2,<6",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
